# free-voice

./: .env.template  .gitignore  .secrets.baseline  AGENTS.md  Makefile  README.md  config.yml.example
ansible/: README.md  ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: 01-system-prep.yml  02-network.yml  03-security.yml  04-duckdns-ssl.yml  05-nginx.yml  06-client.yml  07-api.yml  08-database.yml  09-dendrite.yml  10-livekit.yml  README.md
ansible/roles/: README.md
ansible/roles/duckdns_ssl/: README.md
ansible/roles/network/: README.md
ansible/roles/security/: README.md
ansible/roles/system_prep/: README.md
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/cli/: __init__.py  admin_register.py
backend/src/helpers/: __init__.py  config.py  control.py  dao.py  mailer.py  matrix_auth.py  notifications.py  push_i18n.py
backend/src/models/: __init__.py  schemas.py
backend/src/routes/: auth.py  links.py  livekit.py  matrix.py  push.py
backend/tests/: conftest.py  test_auth.py  test_links.py  test_livekit.py  test_matrix_migration.py  test_media_cleanup.py  test_push.py  test_security.py
client/: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: app.css  app.html  service-worker.ts  svelte-shims.d.ts  test-setup.js
client/src/lib/: config.ts
client/src/routes/: +layout.svelte
client/static/: manifest.json
client/tests/e2e/: playwright.config.ts  (+1 more)
docs/: README.md
openspec/: config.yaml
(+197 files in other folders)
